--- a/.gitignore
+++ b/.gitignore
@@ -125,3 +125,8 @@ all.config
 
 # fetched Android config fragments
 kernel/configs/android-*.cfg
+build/Changelog\.txt
+out
+build/Image\.gz-dtb
+
+upload/
