--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -1296,4 +1296,7 @@ config TOUCHSCREEN_SYNAPTICS_DSX
 source "drivers/input/touchscreen/synaptics_dsx/Kconfig"
 source "drivers/input/touchscreen/oneplus_touchscreen/Kconfig"
 
+config WAKE_GESTURES
+	bool "wake gestures"
+
 endif
