--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.121 Kernel Configuration
+# Linux/arm64 4.14.123 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -4478,6 +4478,40 @@ CONFIG_ION=y
 #
 # CONFIG_TYPEC_TCPM is not set
 # CONFIG_PI433 is not set
+
+#
+# Qualcomm Atheros CLD WLAN module
+#
+CONFIG_QCA_CLD_WLAN=y
+CONFIG_QCACLD_WLAN_LFR3=y
+CONFIG_PRIMA_WLAN_OKC=y
+CONFIG_WLAN_FEATURE_11W=y
+CONFIG_WLAN_FEATURE_LPSS=y
+CONFIG_QCOM_VOWIFI_11R=y
+CONFIG_QCACLD_FEATURE_NAN=y
+CONFIG_QCACLD_FEATURE_GREEN_AP=y
+CONFIG_HELIUMPLUS=y
+CONFIG_QCOM_TDLS=y
+CONFIG_QCOM_LTE_COEX=y
+CONFIG_MPC_UT_FRAMEWORK=y
+CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_WLAN_FASTPATH=y
+CONFIG_WLAN_NAPI=y
+CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
+CONFIG_WLAN_SYNC_TSF=y
+CONFIG_LFR_SUBNET_DETECTION=y
+CONFIG_MCC_TO_SCC_SWITCH=y
+CONFIG_QCACLD_WLAN_LFR2=y
+CONFIG_WLAN_FEATURE_DISA=y
+CONFIG_WLAN_FEATURE_FIPS=y
+CONFIG_WLAN_FEATURE_11AX=y
+# CONFIG_ICMP_DISABLE_PS is not set
+CONFIG_BUILD_TIMESTAMP=y
+CONFIG_WLAN_FEATURE_FILS=y
+CONFIG_NAN_CONVERGENCE=y
+# CONFIG_WLAN_OBJMGR_DEBUG is not set
+CONFIG_WLAN_FEATURE_DFS_OFFLOAD=y
+CONFIG_WLAN_FEATURE_SARV1_TO_SARV2=y
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
