--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -370,11 +370,19 @@ CONFIG_BLK_MQ_PCI=y
 #
 CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
+CONFIG_IOSCHED_MAPLE=y
 CONFIG_IOSCHED_CFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_CFQ_GROUP_IOSCHED=y
+CONFIG_IOSCHED_ZEN=y
 # CONFIG_DEFAULT_DEADLINE is not set
 CONFIG_DEFAULT_CFQ=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_SIO is not set
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_ZEN is not set
+# CONFIG_DEFAULT_MAPLE is not set
 CONFIG_DEFAULT_IOSCHED="cfq"
 CONFIG_MQ_IOSCHED_DEADLINE=y
 CONFIG_MQ_IOSCHED_KYBER=y
@@ -671,6 +679,7 @@ CONFIG_PM_GENERIC_DOMAINS=y
 CONFIG_PM_GENERIC_DOMAINS_SLEEP=y
 CONFIG_PM_GENERIC_DOMAINS_OF=y
 CONFIG_CPU_PM=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -2160,6 +2169,7 @@ CONFIG_TOUCHPANEL_SYNAPTICS_S3706=y
 # CONFIG_TOUCHPANEL_SYNAPTICS_S1302 is not set
 CONFIG_TOUCHPANEL_SAMSUNG_S6SY761=y
 CONFIG_TOUCHPANEL_ST_FST1BA90A=y
+# CONFIG_WAKE_GESTURES is not set
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_DETECT=y
 # CONFIG_FINGERPRINT_FPC is not set
@@ -3282,6 +3292,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
+# CONFIG_KLAPSE is not set
 CONFIG_DRM_PANEL=y
 
 #
@@ -4489,14 +4500,19 @@ CONFIG_WLAN_FEATURE_11W=y
 CONFIG_WLAN_FEATURE_LPSS=y
 CONFIG_QCOM_VOWIFI_11R=y
 CONFIG_QCACLD_FEATURE_NAN=y
+CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
 CONFIG_QCACLD_FEATURE_GREEN_AP=y
 CONFIG_HELIUMPLUS=y
+CONFIG_64BIT_PADDR=y
 CONFIG_QCOM_TDLS=y
 CONFIG_QCOM_LTE_COEX=y
 CONFIG_MPC_UT_FRAMEWORK=y
 CONFIG_WLAN_OFFLOAD_PACKETS=y
+CONFIG_FEATURE_TSO=y
+# CONFIG_FEATURE_TSO_DEBUG is not set
 CONFIG_WLAN_FASTPATH=y
 CONFIG_WLAN_NAPI=y
+# CONFIG_WLAN_NAPI_DEBUG is not set
 CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
 CONFIG_WLAN_SYNC_TSF=y
 CONFIG_LFR_SUBNET_DETECTION=y
