--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -2169,7 +2169,7 @@ CONFIG_TOUCHPANEL_SYNAPTICS_S3706=y
 # CONFIG_TOUCHPANEL_SYNAPTICS_S1302 is not set
 CONFIG_TOUCHPANEL_SAMSUNG_S6SY761=y
 CONFIG_TOUCHPANEL_ST_FST1BA90A=y
-# CONFIG_WAKE_GESTURES is not set
+CONFIG_WAKE_GESTURES=y
 CONFIG_INPUT_FINGERPRINT=y
 CONFIG_FINGERPRINT_DETECT=y
 # CONFIG_FINGERPRINT_FPC is not set
@@ -3292,7 +3292,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
-# CONFIG_KLAPSE is not set
+CONFIG_KLAPSE=y
 CONFIG_DRM_PANEL=y
 
 #
