--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -577,8 +577,8 @@ CONFIG_FRAME_VECTOR=y
 CONFIG_ARCH_SUPPORTS_SPECULATIVE_PAGE_FAULT=y
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HAVE_LOW_MEMORY_KILLER=y
-# CONFIG_PROCESS_RECLAIM is not set
-CONFIG_SMART_BOOST=y
+CONFIG_PROCESS_RECLAIM=y
+# CONFIG_SMART_BOOST is not set
 CONFIG_ARM64_DMA_USE_IOMMU=y
 CONFIG_ARM64_DMA_IOMMU_ALIGNMENT=9
 CONFIG_SECCOMP=y
@@ -5297,7 +5297,7 @@ CONFIG_DEFRAG_HELPER=y
 # CONFIG_CRPL_HELPER is not set
 CONFIG_ADJ_CHAIN=y
 # CONFIG_HOUSTON is not set
-CONFIG_MEMPLUS=y
+# CONFIG_MEMPLUS is not set
 CONFIG_FSC=y
 # CONFIG_PARAM_READ_WRITE is not set
 CONFIG_OEM_FORCE_DUMP=y
