defconfig: Add my module signing certificate to the trusted keys
Signed-off-by: Planet-X <planetx.dev@gmail.com>

--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.123 Kernel Configuration
+# Linux/arm64 4.14.125 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -6004,7 +6004,7 @@ CONFIG_PKCS7_MESSAGE_PARSER=y
 #
 CONFIG_MODULE_SIG_KEY="certs/signing_key.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
-CONFIG_SYSTEM_TRUSTED_KEYS=""
+CONFIG_SYSTEM_TRUSTED_KEYS="certs/planet9_key.x509.pem"
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
 # CONFIG_SECONDARY_TRUSTED_KEYRING is not set
 # CONFIG_SYSTEM_BLACKLIST_KEYRING is not set
