--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -3332,7 +3332,6 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
-CONFIG_KLAPSE=y
 CONFIG_DRM_PANEL=y
 
 #
@@ -3482,6 +3481,7 @@ CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
 CONFIG_LOGO_LINUX_CLUT224=y
+CONFIG_KLAPSE=y
 CONFIG_SOUND=y
 # CONFIG_SOUND_OSS_CORE is not set
 CONFIG_SND=y
@@ -4535,40 +4535,7 @@ CONFIG_ION=y
 # Qualcomm Atheros CLD WLAN module
 #
 CONFIG_QCA_CLD_WLAN=y
-CONFIG_QCACLD_WLAN_LFR3=y
-CONFIG_PRIMA_WLAN_OKC=y
-CONFIG_WLAN_FEATURE_11W=y
-CONFIG_WLAN_FEATURE_LPSS=y
-CONFIG_QCOM_VOWIFI_11R=y
-CONFIG_QCACLD_FEATURE_NAN=y
-CONFIG_WLAN_FEATURE_NAN_DATAPATH=y
-CONFIG_QCACLD_FEATURE_GREEN_AP=y
-CONFIG_HELIUMPLUS=y
-CONFIG_64BIT_PADDR=y
-CONFIG_QCOM_TDLS=y
-CONFIG_QCOM_LTE_COEX=y
-CONFIG_MPC_UT_FRAMEWORK=y
-CONFIG_WLAN_OFFLOAD_PACKETS=y
-CONFIG_FEATURE_TSO=y
-# CONFIG_FEATURE_TSO_DEBUG is not set
-CONFIG_WLAN_FASTPATH=y
-CONFIG_WLAN_NAPI=y
-# CONFIG_WLAN_NAPI_DEBUG is not set
-CONFIG_WLAN_TX_FLOW_CONTROL_V2=y
-CONFIG_WLAN_SYNC_TSF=y
-CONFIG_LFR_SUBNET_DETECTION=y
-CONFIG_MCC_TO_SCC_SWITCH=y
-CONFIG_QCACLD_WLAN_LFR2=y
-CONFIG_WLAN_FEATURE_DISA=y
-CONFIG_WLAN_FEATURE_FIPS=y
-CONFIG_WLAN_FEATURE_11AX=y
-# CONFIG_ICMP_DISABLE_PS is not set
-CONFIG_BUILD_TIMESTAMP=y
-CONFIG_WLAN_FEATURE_FILS=y
-CONFIG_NAN_CONVERGENCE=y
-# CONFIG_WLAN_OBJMGR_DEBUG is not set
-CONFIG_WLAN_FEATURE_DFS_OFFLOAD=y
-CONFIG_WLAN_FEATURE_SARV1_TO_SARV2=y
+CONFIG_QCA_CLD_WLAN_PROFILE="default"
 # CONFIG_GOLDFISH is not set
 # CONFIG_CHROME_PLATFORMS is not set
 
