--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.125 Kernel Configuration
+# Linux/arm64 4.14.132 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -583,6 +583,7 @@ CONFIG_CMA=y
 # CONFIG_CMA_DEBUG is not set
 # CONFIG_CMA_DEBUGFS is not set
 CONFIG_CMA_AREAS=7
+# CONFIG_GCMA is not set
 # CONFIG_ZPOOL is not set
 # CONFIG_ZBUD is not set
 CONFIG_ZSMALLOC=y
@@ -2531,6 +2532,7 @@ CONFIG_PINCTRL_SM8150=y
 # CONFIG_PINCTRL_SDXPRAIRIE is not set
 # CONFIG_PINCTRL_SLPI is not set
 CONFIG_GPIOLIB=y
+CONFIG_GPIOLIB_FASTPATH_LIMIT=512
 CONFIG_OF_GPIO=y
 CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
@@ -3129,7 +3131,6 @@ CONFIG_V4L_PLATFORM_DRIVERS=y
 # Qualcomm Technologies, Inc. MSM Camera And Video
 #
 CONFIG_SPECTRA_CAMERA=y
-# CONFIG_MSM_AIS is not set
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
@@ -3332,6 +3333,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 CONFIG_DRM_SDE_WB=y
 CONFIG_DRM_SDE_EVTLOG_DEBUG=y
 CONFIG_DRM_SDE_RSC=y
+# CONFIG_DRM_SYNC_DEBUG is not set
 CONFIG_DRM_PANEL=y
 
 #
@@ -5665,6 +5667,7 @@ CONFIG_IPC_LOGGING=y
 # CONFIG_QCOM_RTB is not set
 CONFIG_TRACING=y
 CONFIG_GENERIC_TRACER=y
+CONFIG_DISABLE_TRACE_PRINTK=y
 CONFIG_TRACING_SUPPORT=y
 CONFIG_FTRACE=y
 # CONFIG_FUNCTION_TRACER is not set
