defconfig: Disable build of OPCHAIN
Signed-off-by: Planet-X <planetx.dev@gmail.com>

--- a/arch/arm64/configs/op7pro_defconfig
+++ b/arch/arm64/configs/op7pro_defconfig
@@ -5293,7 +5293,7 @@ CONFIG_ESOC_MDM_DBG_ENG=y
 # CONFIG_MDM_DBG_REQ_ENG is not set
 CONFIG_OEM_BOOT_MODE=y
 CONFIG_WB_KERNEL_LOG=y
-CONFIG_OPCHAIN=y
+# CONFIG_OPCHAIN is not set
 CONFIG_DEFRAG_HELPER=y
 # CONFIG_CRPL_HELPER is not set
 CONFIG_ADJ_CHAIN=y
